--- a/hw1/multi_norm_robustness.ipynb
+++ b/hw1/multi_norm_robustness.ipynb
@@ -386,7 +386,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Evaluate on L2 attack with different models with eps = 0.5\n",
+        "# Evaluate on multi-norm attacks with different models with eps_linf = 8./255, eps_l2 = 0.75\n",
         "model.load_state_dict(torch.load('models/pretr_Linf.pth'))\n",
         "# Evaluate on multi attacks with model 1\n",
         "\n",
